sfdx-source/force-app/main/default/objects/Commission_Rate__c/Commission_Rate__c.object-meta.xml
<CustomObject>
    <description>The structure and data within the Commission Rate Table (CRT) is enhanced to allow for more granular pricing control, as well as storing deal desk and manager approval thresholds for an entry.</description>
    <label>Commission Rate</label>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Commission Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>