sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Account_Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Vertical__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Account Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>