sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Ace_Basic__c.field-meta.xml
<CustomField>
    <fullName>Ace_Basic__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Ace Basic</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>