sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Ace_Floor__c.field-meta.xml
<CustomField>
    <fullName>Ace_Floor__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Ace Floor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>