sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <formula>IF(
    AND(
        TODAY() &lt; Start__c,
        TODAY() &lt; End__c
    ),
    FALSE,
    IF(
        AND(
            TODAY() &gt;= Start__c,
            TODAY() &lt; End__c
        ),
        TRUE,
        IF(
            AND(
                TODAY() &gt;= Start__c,
                ISBLANK(End__c)
            ),
            TRUE,
            IF(
                TODAY() &lt; End__c,
                TRUE,
                IF(
                    TODAY() &gt; End__c,
                    FALSE,
                    IF(
                        AND(
                            ISBLANK(Start__c),
                            ISBLANK(End__c)
                        ),
                        TRUE,
                        FALSE
                    )
                )
            )
        )
    )
        )
    </formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>