sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Ceiling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Fee__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Defines the absolute maximum for products priced on a fee basis.</inlineHelpText>
    <label>Maximum Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>