sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Ceiling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Rate__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>Maximum Commission</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>