sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Deal_Desk_Commission_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Commission_Threshold__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>Deal Desk Commission Threshold</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>