sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Deal_Desk_Fee_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Fee_Threshold__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Defines the fee rate where if the requested list fee is equal to or greater than this value and less than the User Manager Fee Threshold, trigger an approval to the related Deal Desk.</inlineHelpText>
    <label>Deal Desk Fee Threshold</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>