sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>References and Account&apos;s deck rank to support Approval data in the CRT.</inlineHelpText>
    <label>Deck Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>