sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Dependent_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Identifies another product that must be present for this CRT entry to be valid.</inlineHelpText>
    <label>Dependent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Rates</relationshipLabel>
    <relationshipName>Commission_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>