sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Employee_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Employee_Commitment__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Employee Commitment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>