sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>