sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Filter_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value_1__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>A custom lookup value used to define prices when the pricing characteristics do not match the above logic. The purpose of this field is to account for vertical-specific or otherwise unique attributes that govern pricing.</inlineHelpText>
    <label>Filter Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>