sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Floor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Floor_Fee__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Defines the absolute minimum for products priced on a fee basis.</inlineHelpText>
    <label>Minimum Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>