sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Floor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rate__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>Minimum Commission</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>