sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/GearsetExternalId__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalId__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <externalId>true</externalId>
    <label>Gearset External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>