sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Original_Commission__c.field-meta.xml
<CustomField>
    <fullName>Original_Commission__c</fullName>
    <description>LEM-185: Base commission value to be inserted into same field name on Quote Line object via price rule</description>
    <label>Original Commission %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>