sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>The package this product belongs to. Used to set package-specific pricing. Example: Cx Delivery Fee</inlineHelpText>
    <label>Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>contains</operation>
            <value>Marketplace, Marketing Promotion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Rates (Package)</relationshipLabel>
    <relationshipName>Commission_Rates2</relationshipName>
    <type>Lookup</type>
</CustomField>