sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Package_Product__c.field-meta.xml
<CustomField>
    <fullName>Package_Product__c</fullName>
    <description>LEM-16789: It is used to store Package and Product name specifically for Caviar.</description>
    <label>Package Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>