sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Used for non-commission-based products like Delivery Fees</inlineHelpText>
    <label>Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>