sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Primary_Merchant_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Merchant_Category__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>References the Account&apos;s Primary Merchant Category field to differentiate rate table entries based on Mx vertical.</inlineHelpText>
    <label>Primary Merchant Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>