sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Rates (Product)</relationshipLabel>
    <relationshipName>Commission_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>