sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <description>LEM-185: Necessary for matching rules due to this limitation: https://trailblazer.salesforce.com/ideaView?id=08730000000Dl8OAAS</description>
    <label>Product - Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>