sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Record_Ids_for_Dedup__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids_for_Dedup__c</fullName>
    <description>LEM-13812 : Process Builder concatenates all relevant record ids - used by Salesforce dedup functionality</description>
    <label>Record Ids for Dedup</label>
    <length>120</length>
    <type>Text</type>
</CustomField>