sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Search_Key__c.field-meta.xml
<CustomField>
    <fullName>Search_Key__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <externalId>true</externalId>
    <label>Search Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>