sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Used to capture unique account designations such as TopMx, High AOV, and Local Premium.</inlineHelpText>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>