sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>