sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Submarket</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Commission Rates</relationshipLabel>
    <relationshipName>Commission_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>