sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Submarket_Name__c.field-meta.xml
<CustomField>
    <fullName>Submarket_Name__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <formula>Submarket__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Submarket Name</label>
    <type>Text</type>
</CustomField>