sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Target_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Rate__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Target Rate</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>