sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <formula>
        IF( AND(NOT(ISBLANK(Package__c)),NOT(ISBLANK(Submarket__c))) , "Submkt-Pkg",
        IF( AND(NOT(ISBLANK(Package__c)),ISBLANK(TEXT(Account_Primary_Vertical__c)),ISBLANK( TEXT(Region__c) ),ISBLANK(Submarket__c)) , "Product-Pkg",
        IF( AND(NOT(ISBLANK(Package__c)),NOT(ISBLANK(TEXT(Region__c) ))) , "Region-Pkg",
        IF( AND(NOT(ISBLANK(Package__c)),NOT(ISBLANK( TEXT(Account_Primary_Vertical__c ))),ISBLANK(Submarket__c)) , "PMC-Product-Pkg",
        IF( NOT(ISBLANK(Submarket__c)) , "Submarket",
        IF( NOT(ISBLANK(TEXT(Region__c) )), "Region",
        IF( AND(NOT(ISBLANK( Filter_Value_1__c )),ISBLANK( TEXT(Account_Primary_Vertical__c )), ISBLANK(Employee_Commitment__c)), "FV1-Product",
        IF( AND(NOT(ISBLANK( Filter_Value_1__c )),ISBLANK( TEXT(Account_Primary_Vertical__c )), NOT(ISBLANK(Employee_Commitment__c))), "FV1-Product-Commitment",

        "Product") )))))))
    </formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>