sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/Upper_Deal_Desk_Fee_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Deal_Desk_Fee_Threshold__c</fullName>
    <description>LEM-13822: Initial Setup of Commission Rate Object</description>
    <label>Upper Deal Desk Fee Threshold</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>