sfdx-source/force-app/main/default/objects/Commission_Rate__c/fields/User_Manager_Fee_Threshold__c.field-meta.xml
<CustomField>
    <fullName>User_Manager_Fee_Threshold__c</fullName>
    <description>LEM-185: Initial Setup of Commission Rate Object</description>
    <inlineHelpText>Defines the fee amount where if the list fee is equal to this value and greater than the Deal Desk Fee Threshold, trigger an approval from the rep&apos;s manager.</inlineHelpText>
    <label>User Manager Fee Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>