sfdx-source/force-app/main/default/objects/Commission_Rate__c/validationRules/Region_and_Submkt.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_and_Submkt</fullName>
    <active>true</active>
    <description>Cannot have region and submarket populated at the same time.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( TEXT(Region__c) ) ) , NOT( ISBLANK( Submarket__c ) ))</errorConditionFormula>
    <errorMessage>Region and Submarket cannot be populated on the same record. Delete region if you want to price by submarket.</errorMessage>
</ValidationRule>