sfdx-source/force-app/main/default/objects/Commission_Rate__c/validationRules/Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_before_End_Date</fullName>
    <active>true</active>
    <description>The Start Date must be earlier than the End Date</description>
    <errorConditionFormula>Start__c &gt; End__c</errorConditionFormula>
    <errorMessage>Start date cannot be later than the end date</errorMessage>
</ValidationRule>